add and delete traitements

--- a/utah/algorithm/templates/algorithm/manager.html
+++ b/utah/algorithm/templates/algorithm/manager.html
@@ -40,7 +40,7 @@
   <button id="next-button" onclick="next()" class="btn btn-success btn-round">&rarr;</button>
   <button id="previous-button" onclick="previous()" class="btn btn-success btn-round">&larr;</button>
 
-  <h3> Patient n°{{patient.hosp_num}}</h3>
+  <h3> Patient n°{{patient.incl_num}}</h3>
 
   <div id="question-container">
     <div class="progress">
