--- a/utah/patient/templates/patient/postop_patient.html
+++ b/utah/patient/templates/patient/postop_patient.html
@@ -35,7 +35,7 @@
 <form method="post" class="create-form">
   {% csrf_token %}
   <br>
-  <h3> Patient n° {{patient.hosp_num}} | Saisie des données post-opératoires </h3> <hr>
+  <h3> Patient n° {{patient.incl_num}} | Saisie des données post-opératoires </h3> <hr>
   {% include 'patient/snippets/field2html.html' with field=form.schema_therap %}
 
   <div class="table-responsive">
