--- a/utah/algorithm/templates/algorithm/algorithm.html
+++ b/utah/algorithm/templates/algorithm/algorithm.html
@@ -30,14 +30,14 @@
         if (G('pathologie') == 'Prévention primaire') {
           return bleeding(['Arrêt ou non du traitement.', 'Arrêt du traitement.', 'Arrêt du traitement.']); // ligne 1 (tableau 1)
         }
-        else if (G('pathologie') == "Prévention secondaire" && G('traitement2') == 'Aucun') {
+        else if (G('pathologie') == "Prévention secondaire" && G('traitement2') == '') {
           return bleeding(["Pas d'arrêt du traitement.", "Pas d'arrêt du traitement.", "Arrêt du traitement."]); //ligne 2 (tableau 1)
         }
       }
-      else if (G('traitement1') == "Clopidogrel, PLAVIX" && G('pathologie') == "Prévention secondaire" && G('traitement2') == 'Aucun') {
+      else if (G('traitement1') == "Clopidogrel, PLAVIX" && G('pathologie') == "Prévention secondaire" && G('traitement2') == '') {
         return bleeding(["Pas d'arrêt du traitement.", "Arrêt du traitement. Bridge par l'aspirine.", 'Arrêt du traitement.']); //ligne 3 (tableau 1)
       }
-      else if (G('traitement1') == "Stents Cardiaques" && G('traitement2') != "Aucun") {
+      else if (G('traitement1') == "Stents Cardiaques" && G('traitement2') != "") {
         if (G('stent_condition') != 'Autres') {
           return bleeding(["Report de la procédure. Si impossible, poursuite de la bitherapie.",
                            "Report de la procédure. Si impossible, arrêt de l'anti-P2Y12, pas d'arrêt de l'aspirine.",
