--- a/utah/algorithm/templates/algorithm/manager.html
+++ b/utah/algorithm/templates/algorithm/manager.html
@@ -56,6 +56,11 @@
             {% endif %}
           {% endfor %}
         </div>
+        <div id="conclusions" style="display: none;" class="btn-group-vertical">
+          <h4> Conclusions </h4><hr>
+
+        </div>
+
     {% endfor %}
 
     <div id="final" style="display: none; text-align: left;"> </div>
@@ -68,164 +73,106 @@
 </html>
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-
-{% include 'algorithm/algorithm.html' %}
-
 <script type="text/javascript">
 
-  if ("{{auto_skip}}" == "True") {
-    var rp = {{default_responses | safe}};
-  } else {
-    var rp = {};
+  const init_algo = {{algo|safe}};
+  const questions = {{quests|safe}};
+  var current_qid = null;
+  var results = {}
+  var conclusions = {};
+  var current_traitement = 'conclusion';
+  start_algo()
+
+  function p_update(value){
+    document.getElementById("algo-progress").setAttribute('style', "width: " + value + "%");
   }
 
-  var current_question_id = null;
-  var conclusion = null;
-  var progress_value = 0;
-  const progress_step = 20;
-  set_default_responses();
-  answer();
+  function show_question(qid) {
+    document.getElementById("next-button").style.display = 'inline';
+    if (Object.keys(results).length === 0) {
+      document.getElementById("previous-button").style.display = 'none';
+    }
+    else {
+      document.getElementById("previous-button").style.display = 'inline';
+    }
+    if (current_qid != null) {
+      document.getElementById(current_qid).style.display = 'none';
+    }
+    document.getElementById(qid).style.display = 'inline';
+    current_qid = qid
+  }
+
+  function show_conclusions() {
+    document.getElementById('conclusions').style.display = 'inline';
+    document.getElementById("previous-button").style.display = 'inline';
+    document.getElementById("next-button").style.display = 'none';
+    if (current_qid != null) {
+      document.getElementById(current_qid).style.display = 'none';
+    }
+    var content = "<h4>Conclusions</h4><hr>";
+    for (const [key, value] of Object.entries(conclusions)) {
+      if (key != 'null') {
+        content += "<strong>"+key+": </strong>";
+      }
+      content += "<a>"+value+"</a><br>";
+    }
+    document.getElementById('conclusions').innerHTML = content;
+    current_qid = 'conclusions'
+  }
 
   function next() {
-    var radios = document.getElementsByName("options-outlined " + current_question_id);
+    var radios = document.getElementsByName("options-outlined " + current_qid);
     for (var radio of radios) {
       if (radio.checked) {
-        p_update(progress_step);
-        return answer(response=radio.value);
+        results[current_qid] = radio.value;
+        return start_algo();
       }
     }
   }
 
   function previous() {
-    // remove last response
-
-    const last_question_id = Object.keys(rp)[Object.keys(rp).length-1];
-    delete rp[last_question_id];
-    p_update(-progress_step);
-    return answer();
+    const last_qid = Object.keys(results)[Object.keys(results).length-1];
+    delete results[last_qid];
+    start_algo();
   }
 
 
-  function show_response(response){
-    var content = "";
-
-    if (response.includes('\n')) {
-      content += "<h4>Avant l'intervention</h4><hr>";
-      content += sentence2html(response.split('\n')[0]);
-      content += "<h4>Après l'intervention</h4><hr>";
-      content += sentence2html(response.split('\n')[1]);
-    }
-    else {
-      content += "<h4>Conclusion</h4><hr>";
-      content += sentence2html(response);
-    }
-    document.getElementById(current_question_id).style.display = 'none';
-    document.getElementById('next-button').style.display = 'none';
-    document.getElementById('previous-button').style.display = 'inline';
-    document.getElementById('submit-result-button').style.display = 'inline';
-    document.getElementById('final').style.display = 'inline';
-    document.getElementById('final').innerHTML = content;
-    conclusion = response;
-    current_question_id = "final";
-    p_update('end');
-  }
-
-  function show_question(question_id) {
-    if (Object.keys(rp).length == 0){
-      p_update('start');
-      document.getElementById('previous-button').style.display = 'none';
-    }
-    else {
-      document.getElementById('previous-button').style.display = 'inline';
-    }
-    document.getElementById('submit-result-button').style.display = 'none';
-    document.getElementById('next-button').style.display = 'inline';
-    document.getElementById(question_id).style.display = 'inline';
-    if (current_question_id != null) {
-      document.getElementById(current_question_id).style.display = 'none';
-    }
-    current_question_id = question_id;
-  }
-
-  function answer(response=null) {
-    if (response != null) {
-      rp[current_question_id] = response;
-    }
-
+  function start_algo() {
+    p_update(0);
     try {
-      show_response(algorithm());
-    } catch (question){
-      show_question(question);
+      algorithm(init_algo);
+      show_conclusions();
+      p_update(100);
+    }
+    catch (out) {
+      show_question(out);
     }
   }
 
+  function algorithm(algo) {
+    if (typeof algo == "string"){
+      conclusions[current_traitement] = algo;
+      return;
+    }
 
-  function print(d) {
-    window.alert(JSON.stringify(d, null, 4));
-  }
-
-  function set_default_responses(){
-    for (const [key, value] of Object.entries({{default_responses | safe}})) {
-      if (document.getElementById(key+'-'+value) != null) {
-        document.getElementById(key+'-'+value).checked = true;
+    for (const [step, subalgo] of Object.entries(algo)) {
+      key = step.split(' #')[0];
+      prog = parseInt(step.split(' #')[1]);
+      p_update((prog-1) / 28 * 100);
+      if (key in results) {
+        if ('details' in questions[key]) {
+          current_traitement = key;
+        }
+        if (results[key] in subalgo){
+          algorithm(subalgo[results[key]]);
+        }
+      }
+      else if (key in questions) {
+        throw key;
       }
     }
   }
 
-  function sentence2html(sentence) {
-    var html = "";
-    for (const line of sentence.split('. ')) {
-      html += "<p>" + line + "</p>";
-    }
-    return html
-  }
-
-  function p_update(value){
-    if (value == 'end') {
-      progress_value = 100;
-    } else if (value == 'start') {
-      progress_value = 0;
-    } else {
-      progress_value += value;
-    }
-    document.getElementById("algo-progress").setAttribute('style', "width: " + progress_value + "%");
-  }
-
-  function G(question_id) {
-    if (question_id in rp) {
-      return rp[question_id];
-    }
-    else {
-      throw question_id;
-    }
-  }
-
-  function flags(question_id) {
-    return {{questions.traitement1.answers | safe}}[G(question_id)];
-  }
-
-  function send_results() {
-    rp['algo_result'] = conclusion;
-    const form = document.getElementById('algo-form');
-
-    for (const key in rp) {
-      if (rp.hasOwnProperty(key)) {
-        const hiddenField = document.createElement('input');
-        hiddenField.type = 'hidden';
-        hiddenField.name = key;
-        hiddenField.value = rp[key];
-
-        form.appendChild(hiddenField);
-      }
-    }
-
-    document.body.appendChild(form);
-    form.submit();
-  }
 
 </script>
-
-
-
 {% endblock content %}
