--- a/utah/patient/templates/patient/patients.html
+++ b/utah/patient/templates/patient/patients.html
@@ -84,7 +84,7 @@
 
 
 <script type="text/javascript">
-	document.getElementById("id_q").value = "{{query}}"
+	document.getElementById("id_q").value = "{{query}}";
   $('tr[data-href]').on("click", function() {
       document.location = $(this).data('href');
   });
