--- a/utah/templates/snippets/header.html
+++ b/utah/templates/snippets/header.html
@@ -74,5 +74,7 @@
 
 
 <script type="text/javascript">
-	document.getElementById("id_q").value = "{{query}}"
+	if ("{{query}}" != "") {
+		document.getElementById("id_q").value = "{{query}}";
+	}
 </script>
