organize and comment and add editable folder

--- a/utah/algorithm/templates/algorithm/algo_manager.html
+++ b/utah/algorithm/templates/algorithm/algo_manager.html
@@ -11,6 +11,10 @@
     max-width: 50%;
     }
 
+    h4 {
+      white-space: pre-line;
+    }
+
   .btn-round {
     width: 60px;
     height: 60px;
