--- a/utah/patient/templates/patient/edit_traitement.html
+++ b/utah/patient/templates/patient/edit_traitement.html
@@ -23,13 +23,13 @@
       <br><br><strong>Résultats: </strong> <p>{{traitement.conclusion}}</p>
       {% endif %}
     <br>
-    
+
     <input type="hidden" name="submitType" id="submitType">
     <button type="submit" class="btn btn-success">Modifier</button>
     <button type="submit" onclick='document.getElementById("submitType").value = "delete"' class="btn btn-danger">Supprimer le traitement</button>
 
     {% if traitement.conclusion %}
-      <button type="submit" onclick='document.getElementById("submitType").value = "reset"' class="btn btn-outline-danger">Supprimer les résultats</button>
+      <button type="submit" onclick='document.getElementById("submitType").value = "reset"' class="btn btn-outline-danger">Réinitialiser le résultat</button>
     {% endif %}
   </form>
 
