--- a/utah/personal/templates/personal/home.html
+++ b/utah/personal/templates/personal/home.html
@@ -11,7 +11,17 @@
     margin: 0 auto;
     text-align: center;
     max-width: 50%;
+    top: 30%;
+    left: 25%;
+    right: 25%;
+    position: fixed;
     }
+  .btn {
+    font-size: 100%;
+  }
+
+
+
 </style>
 
 <div id="centered-buttons" class="btn-group-vertical">
