customize and fix details

--- a/utah/account/templates/account/login.html
+++ b/utah/account/templates/account/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load bootstrap_icons %}
 
 {% block content %}
 
@@ -34,7 +35,12 @@
   .h3  {
     text-align: center;
   }
-
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
 </style>
 
 
