--- a/utah/templates/snippets/header.html
+++ b/utah/templates/snippets/header.html
@@ -45,6 +45,7 @@
 			<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
 				<li><a class="nav-link px-2 text-secondary" href="{% url 'home' %}">Accueil</a></li>
 				<li><a class="nav-link px-2 text-white" href="/admin/">Administration</a></li>
+				<li><a class="nav-link px-2 text-white" href="#">Contact</a></li>				
 			</ul>
 
 			<h2 class="h2 col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 text-center"> Bonjour {{ user.username }}</h2>
