--- a/utah/patient/templates/patient/patients.html
+++ b/utah/patient/templates/patient/patients.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load bootstrap %}
+{% load static %}
 
 
 {% block content %}
@@ -17,30 +18,46 @@
   .patients {
 	    padding: 15px;
   	}
+
+  /* .add-patient {
+    margin: 0 auto;
+    width: 100px;
+  } */
 </style>
 
 <a href="{% url 'home' %}" class="btn btn-dark" style="border-radius: 0;"><</a>
+
 <br><br>
+
+
 <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 2fr;">
   <div class="d-flex align-items-left">
     <form class="w-100 me-3" method="get">
       <div class="form-floating">
         <input class="form-control"  name="q" type="search" id="id_q" placeholder="recherche">
         <label for="id_q">Rechercher des patients</label>
-        {% if n_patients == 0 %}
+        <!-- {% if n_patients == 0 %}
         <p>Aucun patients trouvés</p>
         {% elif n_patients == 1 %}
         <p>1 patient trouvé</p>
         {% else %}
         <p>{{n_patients}} patients trouvés</p>
-        {% endif %}
+        {% endif %} -->
       </div>
     </form>
-  </div>
+    <div class=add-patient>
+      <a href="{% url 'patient:preop' %}" class="btn">
+        <img src="{% static 'images/add_patient.svg' %}" class="icon2" width="40px" />
+      </a>
+    </div>
 
-  <div>
-    <a href="{% url 'patient:preop' %}" class="btn btn-success">+ Nouveau patient</a>
   </div>
+  <br>
+
+
+
+
+
 
   {% if n_patients %}
 
