--- a/utah/templates/snippets/base_css.html
+++ b/utah/templates/snippets/base_css.html
@@ -2,4 +2,28 @@
 	body{
 		background-color: #f2f2f2;
 	}
+	.icon1 {
+    color: white;
+    filter: invert(50%) sepia(50%) saturate(500%) brightness(120%) contrast(100%) hue-rotate(90deg);
+  }
+
+
+	.icon2 {
+    color: white;
+    filter: invert(50%) sepia(50%) saturate(500%) brightness(120%) contrast(100%) hue-rotate(90deg);
+  }
+	.icon2:hover {
+		color: white;
+    filter: invert(50%) sepia(50%) saturate(500%) brightness(80%) contrast(100%) hue-rotate(90deg);
+	}
+
+	.icon3 {
+    color: white;
+    filter: invert(50%) sepia(50%) saturate(500%) brightness(100%) contrast(100%) hue-rotate(170deg);
+  }
+	.icon3:hover {
+		color: white;
+    filter: invert(50%) sepia(50%) saturate(500%) brightness(80%) contrast(100%) hue-rotate(180deg);
+	}
+
 </style>
