--- a/utah/personal/templates/personal/pdf_template.html
+++ b/utah/personal/templates/personal/pdf_template.html
@@ -72,7 +72,7 @@
   <h2> Consultation </h2><hr>
   <table class="table" id="consultation">
     <tbody>
-      <tr><th>Médecin :</th>  <td>{{patient.consultant}}</td></tr>
+      <tr><th>Médecin :</th>  <td>{{patient.author.alias}}</td></tr>
       <tr><th>Date de la consultation :</th>           <td>{{patient.ddconsult | date:'d/m/Y'}}</td></tr>
     </tbody>
   </table>
